--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.6"
+    "vue-jwt-decode": "^0.1.0",
+    "vue-router": "^3.1.6",
+    "vue-sweetalert2": "^4.2.1"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.11.5",
