--- a/server/package.json
+++ b/server/package.json
@@ -14,11 +14,12 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongodb": "^3.6.5",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
   },
   "devDependencies": {
-    "eslint": "^7.21.0",
+    "eslint": "^7.22.0",
     "eslint-plugin-vue": "^7.7.0"
   }
 }
