--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@syncfusion/ej2-vue-dropdowns": "^19.1.54",
+    "@syncfusion/ej2-vue-grids": "^19.1.54",
+    "@syncfusion/ej2-vue-popups": "^19.1.54",
     "axios": "^0.21.1",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.17.3",
