--- a/client/package.json
+++ b/client/package.json
@@ -8,14 +8,24 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.21.1",
+    "@banneredge/vue-listbox-multiselect": "^0.1.2",
+    "@syncfusion/ej2-data": "^18.4.46",
+    "@syncfusion/ej2-vue-dropdowns": "^18.4.49",
+    "@syncfusion/ej2-vue-grids": "^18.4.49",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.4",
+    "mdi-vue": "^2.2.3",
+    "splitpanes": "^3.0.4",
     "vue": "^2.6.11",
     "vue-jwt-decode": "^0.1.0",
+    "vue-mdi": "^1.0.0",
     "vue-router": "^3.1.6",
-    "vue-sweetalert2": "^4.2.1"
+    "vue-split-pane": "0.0.8",
+    "vue-splitpane": "^1.0.6",
+    "vue-sweetalert2": "^4.2.1",
+    "vue-waterfall-common": "^1.0.5",
+    "vuetify": "^2.4.0"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.11.5",
@@ -30,10 +40,12 @@
     "mutationobserver-shim": "^0.3.7",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
-    "sass": "^1.26.11",
+    "sass": "^1.32.0",
     "sass-loader": "^10.0.2",
     "vue-cli-plugin-bootstrap-vue": "~0.7.0",
-    "vue-template-compiler": "^2.6.11"
+    "vue-cli-plugin-vuetify": "~2.3.1",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.7.0"
   },
   "eslintConfig": {
     "root": true,
@@ -53,5 +65,15 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "vue"
+    ],
+    "transform": {
+      ".*\\.(vue)$": "vue-jest"
+    }
+  }
 }
