--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,9 @@
     "mongoose": "^5.12.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
-    "sweetalert2": "^10.15.6"
+    "sweetalert2": "^10.15.6",
+    "vue-jwt-decode": "^0.1.0",
+    "vue-sweetalert2": "^4.2.1"
   },
   "devDependencies": {
     "eslint": "^7.21.0",
