--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "vue": "^2.6.12",
     "vue-jwt-decode": "^0.1.0",
     "vue-mdi": "^1.0.0",
+    "vue-notification": "^1.3.20",
     "vue-router": "^3.1.6",
     "vue-split-pane": "0.0.8",
     "vue-splitpane": "^1.0.6",
