--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "mdi-vue": "^2.2.3",
     "splitpanes": "^3.0.4",
     "vue": "^2.6.12",
+    "vue-dynamic-dropdown": "^1.0.12",
     "vue-jwt-decode": "^0.1.0",
     "vue-mdi": "^1.0.0",
     "vue-router": "^3.1.6",
@@ -26,7 +27,7 @@
     "vue-splitpane": "^1.0.6",
     "vue-sweetalert2": "^4.2.1",
     "vue-waterfall-common": "^1.0.5",
-    "vuetify": "^2.4.0"
+    "vuetify": "^2.4.9"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.11.5",
