--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,8 @@
     "vue-splitpane": "^1.0.6",
     "vue-sweetalert2": "^4.2.1",
     "vue-waterfall-common": "^1.0.5",
-    "vuetify": "^2.4.9"
+    "vuetify": "^2.4.9",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.11.5",
